Include some of the setup instructions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "Adafruit",
         "Neopixel",
+        "blinka",
+        "circuitpython",
         "coldcpu's"
     ]
 }
