Add some more spell checked words :)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,15 @@
 {
     "cSpell.words": [
         "Adafruit",
+        "GRBW",
         "Neopixel",
+        "RGBW",
+        "RGBWW",
         "blinka",
         "circuitpython",
-        "coldcpu's"
+        "coldcpu's",
+        "csvfile",
+        "isfile",
+        "neopixels"
     ]
 }
